# tensorrt_handson_lab

./: .gitignore  .gitmodules  pyproject.toml
tensorrt_handson_lab/1_trtexec/: 01_build_and_inference.ipynb  02_analysis_with_trex.ipynb
tensorrt_handson_lab/2_tritonserver/nd/inference/: config.pbtxt
tensorrt_handson_lab/2_tritonserver/nd/nd/: config.pbtxt
tensorrt_handson_lab/2_tritonserver/nd/preprocessing/: config.pbtxt
tensorrt_handson_lab/2_tritonserver/nd/preprocessing/1/: model.py
tensorrt_handson_lab/2_tritonserver/sc/: config.pbtxt
tensorrt_handson_lab/tensorrt_utils/: common.py  engine.py
